<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="google_app_id">663114046675</string>
    <string name="hello">Level Up!</string>
    <string name="app_name">Level Up</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_report">You scored %1$s points in %2$s levels</string>
    <string name="gameover_title">Nice Job!</string>
    <string name="gameover_score">Score</string>
    <string name="gameover_level">Level</string>
    <string name="gameover_time">Time</string>
    <string name="gameover_default_value">23</string>
    <string name="gameover_button_restart">Restart</string>
    <string name="gameover_button_mainmenu">Menu</string>
    <string name="gameover_button_share">Share</string>
    <string name="share_game_url">https://goo.gl/7s8tYz</string>
	<string name="share_gameover_subject">%1$s points in %2$s levels. Can you beat that?</string>
    <string name="highscore_label">High Scores</string>
    <string name="highscore_label_first">1st</string>
    <string name="highscore_label_second">2nd</string>
    <string name="highscore_label_third">3rd</string>
    <string name="highscore_default_value">888</string>
    <string name="splash_leaderboard_button">Stats</string>
    <string name="splash_shop_button">Shop</string>
    <string name="splash_share_button">Share</string>
    <string name="highscore_back_button">&lt;</string>
    <string name="highscore_title">Stats</string>
    <string name="highscore_empty_text">Nothing to show</string>
    <string name="rate_title">Rate Level Up</string>
    <string name="rate_text">If you enjoy playing, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>

</resources>