<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_weight="1" >
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:textSize="48sp"
	        android:text="@string/gameover_title"
	        android:textColor="@color/white" />
	    
    </LinearLayout>
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" >
        
        <TableRow 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp" >
            
            <TextView 
		        android:layout_width="0dip"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:paddingRight="8dp"
		        android:gravity="center_vertical|end"
		        android:textSize="32sp"
		        android:textColor="@color/purple"
		        android:text="@string/gameover_score" />
            
            <LinearLayout 
                android:layout_width="0dip"
			    android:layout_height="fill_parent"
			    android:orientation="horizontal"
			    android:layout_weight="1" >
			    
	            <TextView
	                android:id="@+id/gameover_score"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:paddingLeft="8dp"
	                android:gravity="center_vertical|end"
	                android:text="@string/gameover_default_value"
	                android:textColor="@color/white"
	                android:textSize="48sp" />
	            
	            <TextView
	                android:id="@+id/gameover_score_rank"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:paddingLeft="8dp"
	                android:gravity="center_vertical|start"
	                android:text="@string/gameover_default_value"
	                android:textColor="@color/white"
	                android:textSize="24sp" />
            </LinearLayout>
        </TableRow>
        
        <TableRow 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp" >
            
            <TextView 
		        android:layout_width="0dip"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:paddingRight="8dp"
		        android:gravity="center_vertical|end"
		        android:textSize="32sp"
		        android:textColor="@color/light_blue"
		        android:text="@string/gameover_level" />
            
            <LinearLayout 
                android:layout_width="0dip"
			    android:layout_height="fill_parent"
			    android:orientation="horizontal"
			    android:layout_weight="1" >
            
	            <TextView
	                android:id="@+id/gameover_level"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:paddingLeft="8dp"
	                android:gravity="center_vertical|end"
	                android:text="@string/gameover_default_value"
	                android:textColor="@color/white"
	                android:textSize="48sp" />
	            
	            <TextView
	                android:id="@+id/gameover_level_rank"
	                android:layout_width="wrap_content"
	                android:layout_height="fill_parent"
	                android:paddingLeft="8dp"
	                android:gravity="center_vertical|start"
	                android:text="@string/gameover_default_value"
	                android:textColor="@color/white"
	                android:textSize="24sp" />
            
            </LinearLayout>
        </TableRow>
        
        <TableRow 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp" >
            
            <TextView 
		        android:layout_width="0dip"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:paddingRight="8dp"
		        android:gravity="center_vertical|end"
		        android:textSize="32sp"
		        android:textColor="@color/turquoise"
		        android:text="@string/gameover_time" />
            
            <TextView
                android:id="@+id/gameover_time"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/gameover_default_value"
                android:textColor="@color/white"
                android:textSize="48sp" />
        </TableRow>
    </TableLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
	    
        <Button 
	        android:id="@+id/gameover_restart"
	        android:layout_width="56dp"
	        android:layout_height="56dp"
	        android:layout_marginRight="16dp"
	        android:background="@color/turquoise"
	        android:textColor="@color/white"
	        android:text="@string/gameover_button_restart" />
        
        <Button 
	        android:id="@+id/gameover_mainmenu"
	        android:visibility="gone"
	        android:layout_width="56dp"
	        android:layout_height="56dp"
	        android:layout_marginRight="16dp"
	        android:background="@color/grey"
	        android:textColor="@color/white"
	        android:text="@string/gameover_button_mainmenu" />
        
        <Button 
	        android:id="@+id/gameover_share"
	        android:layout_width="56dp"
	        android:layout_height="56dp"
	        android:background="@color/light_blue"
	        android:textColor="@color/white"
	        android:text="@string/gameover_button_share" />
        
    </LinearLayout>

</LinearLayout>
